test/testcase/version_1/pass/track-whitespace-nonNegativeInteger.xspf
<?xml version="1.0" encoding="utf-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<trackList>
		<track>
			<duration>1</duration>
		</track>
		<track>
			<duration>
1</duration>
		</track>
		<track>
			<duration>1
</duration>
		</track>
		<track>
			<duration>
1
			</duration>
		</track>
	</trackList>
</playlist>
