test/testcase/version_1/fail/playlist-nonleaf-content-trackList.xspf
<playlist version="1" xmlns="http://xspf.org/ns/0/">
  <trackList>FORBIDDEN</trackList>
</playlist>
